# JavaPlusPlus

./: .gitignore  JavaToPythonConverter.java  README.md  ideas.md
Documents/: Conclusion.md  Interpreter Architecture.md  Language_Tutorial.md  specification.md  white_paper.md
ExampleCode/: CMakeLists.txt  JPPFileCreation.java  JavaPlusPlusTokenizer.java  Lexer.java  Main.java  MangoCode.txt  interpreter.java
src/: IDE.java  Interpreter.java  JPPFileCreation.java  JavaPlusPlusTokenizer.java  JavaToPythonConverter.c  JavaToPythonConverter.h  JavaToPythonConverter.java  Main.java  Token.java  TokenType.java  interpreter.java
src/ExampleCode/: CodeExplanation.md  Java++CodeExample1.jpp  Java++CodeExample1.txt
